[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mount-image"
version = "0.1.0"
description = "Cross-platform disk image mounting via loop devices (Linux) or hdiutil (macOS)"
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.10"
authors = [{ name = "Michael Banucu", email = "michael.banucu@googlemail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/MBanucu/mount-image"
Repository = "https://github.com/MBanucu/mount-image"

[tool.setuptools.packages.find]
where = ["."]
include = ["mount_image*"]
