[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mount-image"
version = "0.5.0"
description = "Cross-platform disk image mounting — strategy selector (sudo losetup, udisksctl, guestmount, hdiutil)"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = [
    "mount-image-sudo>=0.1.0",
    "mount-image-udisks>=0.1.0",
    "mount-image-guestmount>=0.1.0",
    "mount-image-sshfs>=0.1.0",
    "mount-image-rclone>=0.1.0",
    "mount-image-hdiutil>=0.1.0; sys_platform == 'darwin'",
]
authors = [{ name = "Michael Banucu", email = "michael.banucu@googlemail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/MBanucu/mount-image"
Repository = "https://github.com/MBanucu/mount-image"

[tool.setuptools.packages.find]
where = ["."]
include = ["mount_image*"]
